[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-mistralai>=1.1.1",
    "notebook>=7.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
